my supa calendar completed

--- a/supa-calendar/index.html
+++ b/supa-calendar/index.html
@@ -12,8 +12,11 @@
 <body>
     <header>
         <div class="container-fluid-header">
-            <h1>My Super Calendar</h1>
-            <button id="btnAdd" class="btn btn-danger">Add task</button>
+            <img src="https://fontmeme.com/permalink/211005/2bdbfba5fbf976bb2b74505bcb708602.png" alt="graffiti-creator">
+            <div>
+                <button id="btnAdd" class="btn btn-danger">Add Task</button>
+                <button id="btnClear" class="btn btn-danger">Clear</button>
+            </div>
         </div>
     </header>
 
@@ -25,8 +28,6 @@
             </div>
         </section>
         <section class="section-form">
-            
-
             <form>
                 <div>
                     <label class="form-label">Title</label>
@@ -71,6 +72,5 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/task.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/test.js"></script>
 </body>
 </html>
